# rse-proyecto-final

./: .gitignore  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  codemeta.json  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  requirements.txt
src/: count_figures.py  extract_links.py  extract_xml.py  generate_wordcloud.py
tests/: test_analysis.py
tests/test_data/: fake_paper.tei.xml
