[project]
name = "rse-proyecto-final"
version = "1.0.0"
description = "Pipeline de RSE para extraer y analizar metadatos de artículos científicos usando Grobid."
authors = [
    {name = "Abdelkrim Hadidi", email = "abdelkrim.hadidi@alumnos.upm.es"}
]
readme = "README.md"
requires-python = ">=3.13"


# ---- DEPENDENCIAS PRINCIPALES ----

dependencies = [
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "wordcloud>=1.9.3",
    "beautifulsoup4>=4.12.0", # Para parsear y navegar por el XML que devuelve Grobid
    "lxml>=5.1.0", # Motor rápido para procesar XML junto con beautifulsoup4
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0"
]

# ---- DEPENDENCIAS DESARROLLO ----

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"